overlays/uksouth-prod/olympus/kratos/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kratos
  name: kratos
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: kratos
  sessionAffinity: None
  type: ClusterIP
